--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="fr-FR">
 	<head>
+	<meta charest="UTF-8" />
+	<title>Yuhang YANG</title>
 	</head>
 	<body>
-		<h1>My First Heading</h1>
-		<p>My first paragraph.</p>
+		<h1>Etudiant en Informatique</h1>
+		<link href="CSS.css" type="text/css" rel="stylesheet"/>
+		<div class="droite">
+			<h2>Contact</h2>
+			<p>76 rue du repos</br> 69007 Lyon</br>
+			 Tél: 0783367963</br>
+			<a href="http://www.yuhangyang.com">www.yuhangyang.com</a>
+			</p>			
+		</div>
+
+		<div class="gauche">
+			<h2>Compétences</h2>
+			<h2>Expériences</h2>
+			<h2>Formations</h2>
+			
+		</div>
 	</body>
 </html>
