--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Etudiant en Informatique</h1>
-		<link href="CS.css" type="text/css" rel="stylesheet"/>
+		<link href="CSS.css" type="text/css" rel="stylesheet"/>
 		<div class="droite">
 			<h2>Contact</h2>
 			<p>76 rue du repos</br> 69007 Lyon</br>
