--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="fr-FR">
 	<head>
 	<link href="CSS.css" type="text/css" rel="stylesheet"/>
-	<meta charest="UTF-8" />
+	<meta charset="UTF-8" />
 	<title>Yuhang YANG</title>
 	</head>
 	<body>
-		<h1>Etudiant en Informatique</h1>
+		<h1>Etudiant en ç Informatique</h1>
 		<div class="droite">
 			<h2>Contact</h2>
 			<p>76 rue du repos</br> 69007 Lyon</br>
