--- a/index.html
+++ b/index.html
@@ -1,24 +1,59 @@
 <!DOCTYPE html>
-<html lang="fr-FR">
+<html>
 	<head>
-	<link href="CSS.css" type="text/css" rel="stylesheet"/>
-	<meta charset="UTF-8" />
+	<meta charset="utf-8" />
 	<title>Yuhang YANG</title>
 	</head>
 	<body>
-		<h1>Etudiant en ç Informatique</h1>
-		<div class="droite">
+		<h1><div class="textcenter">Etudiant en Informatique</div></h1>
+		<link href="CSS.css" type="text/css" rel="stylesheet"/>
+		<div class="gauche">
 			<h2>Contact</h2>
-			<p>76 rue du repos</br> 69007 Lyon</br>
-			 Tél: 0783367963</br>
+			<p><b>Yuhang YANG</b></br></br>Adress :</br>76 rue du repos</br> 69007 Lyon</br></br>
+			 Tél: +33 (0)7 83 36 79 63</br></br>
+			 Mail :</br> yuhang.yang@etu.univ-lyon1.fr</br></br>
 			<a href="http://www.yuhangyang.com">www.yuhangyang.com</a>
-			</p>			
+			</p>
+		</br>
+			<h2>Langues</h2>
+			<p>Français : courant</br>
+			Chinois : maternelle</br>
+			Anglais : opérationelle</br>
+			</p>		
 		</div>
 
-		<div class="gauche">
-			<h2>Compétences</h2>
-			<h2>Expériences</h2>
-			<h2>Formations</h2>
+		<div class="droite">
+			<h2><div class="textcenter">Compétences</div></h2>
+				<div class="gauched1">
+				<h3><div class="textcenter">En Informatique</div></h3>
+				<ul>
+				<li>Langages programmation : Java, C, C++, Python, Shell...</li>
+				<li>Système d'exploitation: Unix(Ubuntu,CentOS,Debian),Windows</li>
+				<li>Service web</li>
+
+				</ul>
+			
+				</div>
+				
+				<div class="droited1">
+				<h3><div class="textcenter">En Automatique</div></h3>
+				<ul>
+				<li>Modélisation d'un système en equation mathématique</li>
+				<li>Identification parametrique</li>
+				<li>Simulation,Regulation,Supervision</li>
+				<li>Matbab/Simulink</li>
+				</ul>
+				</div>
+				
+				<br><br><br><br><br><br><br><br><br><br>
+			<h2><div class="textcenter">Expériences</div></h2>
+			<table>
+				<tr><td>04/2018 - 09/2018</td><td>&nbsp;&nbsp;&nbsp;</td><td>Stage de recherche</td></tr>
+				<tr><td>04/2018 - 09/2018</td><td>&nbsp;</td><td>Stage de recherche</td></tr>
+				<tr><td>04/2018 - 09/2018</td><td></td><td>Stage de recherche</td></tr>
+			</table>
+			<h2><div class="textcenter">Formations</div></h2>
+
 			
 		</div>
 	</body>
