--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html>
 	<head>
 	<meta charset="utf-8" />
+	<link href="CSS.css" type="text/css" rel="stylesheet"/>
+
 	<title>Yuhang YANG</title>
 	</head>
 	<body>
-		<h1><div class="textcenter">Etudiant en Informatique</div></h1>
-		<link href="CSS.css" type="text/css" rel="stylesheet"/>
+		<h1><div class="textcenter">Ingénieur en Informatique et Automatique</div></h1>
+		
+		<div class="menu">
+			<h1 style="background-color: aquamarine;">MENU</h1>
+			<table >
+				<tr><td style="width:150px;"><h3><a href="#Contact">Coordonnées</a></h3></td>
+				<td style="width:150px;"><h3><a href="#Compétences">Compétences</a></h3></td>
+				<td style="width:150px;"><h3><a href="#Expériences">Expériences</a></h3></td>
+				<td style="width:150px;"><h3><a href="#Formations">Formations</a></h3></td>
+			</tr></table>
+		</div>
 		<div class="gauche">
-			<h2>Contact</h2>
+			<h2 id="Contact">Coordonnées</h2>
 			<p><b>Yuhang YANG</b></br></br>Adress :</br>76 rue du repos</br> 69007 Lyon</br></br>
 			 Tél: +33 (0)7 83 36 79 63</br></br>
 			 Mail :</br> yuhang.yang@etu.univ-lyon1.fr</br></br>
@@ -23,7 +34,7 @@
 		</div>
 
 		<div class="droite">
-			<h2><div class="textcenter">Compétences</div></h2>
+			<h2 style="background-color: aquamarine;" id="Compétences"><div class="textcenter">Compétences</div></h2>
 				<div class="gauched1">
 				<h3><div class="textcenter">En Informatique</div></h3>
 				<ul>
@@ -46,14 +57,33 @@
 				</div>
 				
 				<br><br><br><br><br><br><br><br><br><br>
-			<h2><div class="textcenter">Expériences</div></h2>
-			<table>
-				<tr><td>04/2018 - 09/2018</td><td>&nbsp;&nbsp;&nbsp;</td><td>Stage de recherche</td></tr>
-				<tr><td>04/2018 - 09/2018</td><td>&nbsp;</td><td>Stage de recherche</td></tr>
-				<tr><td>04/2018 - 09/2018</td><td></td><td>Stage de recherche</td></tr>
+			<h2 style="background-color: aquamarine;"id="Expériences"><div class="textcenter">Expériences</div></h2>
+			<table style="margin-left:5%;">
+				<tr><td>04/2018 - 09/2018</td><td>&nbsp;&nbsp;&nbsp;</td><td><B>Stage de recherche en laboratoire </B>
+					 <a href="https://lagepp.univ-lyon1.fr/"> LAGEP-UMR CNRS 5007.</a><br>&nbsp;&nbsp; 
+					 Application et simulation d’un observateur de type Luenberger pour une machine asynchrone. </br></br></td></tr>
+				<tr><td>07/2010 - 03/2014</td><td>&nbsp;</td><td><B>Responsable  technique au sein de la société</B>
+					 <a href="http://www.huazhongcnc.com/en/Default.aspx"> Wuhan Huazhong CNC</a></br>&nbsp;&nbsp;
+					 Réalisation des boucles de régulation, dépannage et maintenance des machines-outils à commande numérique. </br></br></td></tr>
+				<tr><td>03/2018 - 07/2010</td><td></td><td><B>Stage Licence au sein de la société</B>
+						<a href="http://www.huazhongcnc.com/en/Default.aspx"> Wuhan Huazhong CNC</a></br>&nbsp;&nbsp;
+						Conception d’un poste de travail pour une Fraiseuse CNC (Computer Numerical Control).</td></tr>
 			</table>
-			<h2><div class="textcenter">Formations</div></h2>
 
+			<h2 style="background-color: aquamarine;" id="Formations"><div class="textcenter">Formations</div></h2>
+			<table style="margin-left:5%;">
+					<tr><td>En cours</td><td>&nbsp;&nbsp;&nbsp;</td><td><B>Université Claude Bernard Lyon1</B> <br>&nbsp;&nbsp; 
+						 Master Compétence Complémentaire en Informatique (<a href="http://master-info.univ-lyon1.fr/CCI/"> CCI.</a>), </br>
+						 option Système d’Information pour la Production.</br></br> </td></tr>
+					<tr><td>09/2016 - 09/2018</td><td>&nbsp;</td><td><B>Université Claude Bernard Lyon1</B></br>&nbsp;&nbsp;
+						 Master Electrique Electronique Energie et Automatique (3EA), </br>parcours Génie des Systèmes automatisés 
+						 (<a href="http://offre-de-formations.univ-lyon1.fr/parcours-234/genie-des-systemes-automatises.html"> GSA</a>).</br>
+						Mention bien avec une moyenne 15.71.</br></br>
+						</td></tr>
+					<tr><td>09/2007 - 07/2010</td><td></td><td><B>Université Huazhong des sciences et des technologies</B></br>&nbsp;&nbsp;
+							Licence en Mécanique Electrique et Electronique ; parcours Contrôle Numérique
+							(<a href="http://english.hust.edu.cn/index.htm">MEE</a>).</td></tr>
+				</table>
 			
 		</div>
 	</body>
